--- a/Comp2139_Labs/Comp2139_Labs/Views/Project/Index.cshtml
+++ b/Comp2139_Labs/Comp2139_Labs/Views/Project/Index.cshtml
@@ -25,12 +25,17 @@
                     <td>@project.ProjectId</td>
                     <td>@project.Name</td>
                     <td>@project.Description</td>
+                    <td>
+                        <a asp-action="Delete" class="btn btn-warning">Delete</a>
+                        <a asp-action="Details" asp-route-id="@project.ProjectId" class="btn btn-light">Info</a>
+                    </td>
                 </tr>
             }
         </tbody>
 
 
     </table>
+    <a asp-action="Create" class="btn btn-primary">Add</a>
 
 }
 else
