--- a/Comp2139_Labs/Comp2139_Labs/Views/Project/Details.cshtml
+++ b/Comp2139_Labs/Comp2139_Labs/Views/Project/Details.cshtml
@@ -17,6 +17,16 @@
             <dl>
                 <dt class="col-sm-3">Project Id</dt>
                 <dd class="col-sm-9">@Model.ProjectId</dd>
+
+                <dt class="col-sm-3">Start Date</dt>
+                <dd class="col-sm-9">@Model.StartDate.ToShortDateString()</dd>
+
+                <dt class="col-sm-3">End Date</dt>
+                <dt class="col-sm-9">@Model.EndDate.ToShortDateString()</dd>
+
+                <dt class="col-sm-3">StatusD</dt>
+                <dd class="col-sm-9">@Model.Status</dd>
+
                 <!-- Any other properties that you want to display from your project -->
             </dl>
 
