--- a/Comp2139_Labs/Comp2139_Labs/Views/Shared/_Layout.cshtml
+++ b/Comp2139_Labs/Comp2139_Labs/Views/Shared/_Layout.cshtml
@@ -14,13 +14,25 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Lab1</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GBC Project Management</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+
+                    <form class="d-flex" asp-controller="Home" asp-action="GeneralSearch" method="get">
+
+                        <input class-="form-control" type="text" placeholder="Search" name="searchString"/>
+                        <select class="form-control btn btn-secondary dropdown-toggle" name="searchType">
+                            <option value="Projects">Projects</option>
+                            <option value="Tasks">Tasks</option>
+                        </select>
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+
+                    </form>
+                    <ul class="navbar-nav flex-grow-1 justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i> Home</a>
                         </li>
